--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
 .light-theme {
     --background-color: #fff;
-    --text-color: #000;
+    --text-color: #1a1a1a;
     --box-color: #fff;
     --button-color: #fff;
   
@@ -10,17 +9,20 @@
   
   .dark-theme {
     --background-color: #000;
-    --text-color: #fff;
-    --box-color: #000;
-    --button-color: #000;
+    --text-color: #f5f5f5;
+    --box-color: #2b2b2b;
+    --button-color: #1a1a1a;
   }
-
-  .mine {
-    
-   
-    background-color: var(--background-color);
-
-    transition: all .3s ease-in-out;
+  
+  
+ 
+  
+  body{
+    font-family: poppins;
+   width: 100%;
+   height: 100%;
+   margin: 0;
+   padding: 0;
+  overflow-x: hidden;
   }
-
   
