--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,9 +1,9 @@
 <header class="sticky-top">
     <div class="logo_area">
       <a href="">
-              <img src="../../../assets/images/image7.png" width="50px" alt=""/><br />
-              <a style="color: #d95663">Propty</a>
-              <a style="color: var(--text-color)">Co.</a>
+              <img src="../../../assets/images/12.png" width="50px" alt=""/><br />
+              <a style="color: #d95663">Sweet</a>
+              <a style="color: var(--text-color)">Home</a>
       </a>
     </div>
   
